# parakeet

./: .gitignore  LICENSE  README.md  REFLECTION.md  docker-compose.yml
api/: .dockerignore  .env.example  Dockerfile  pyproject.toml  run_evals.sh
api/app/: config.py  dependencies.py  main.py  seed.py
api/app/agents/: callbacks.py  investigation.py  remediation.py  retro.py  root_cause.py  runner.py  triage.py
api/app/agents/investigation/: agent.py  investigation_eval.evalset.json
api/app/agents/policies/: __init__.py  severity.yaml
api/app/agents/remediation/: agent.py  remediation_eval.evalset.json
api/app/agents/retro/: agent.py  retro_eval.evalset.json
api/app/agents/root_cause/: agent.py  root_cause_eval.evalset.json
api/app/agents/tools/: similar_incidents.py
api/app/agents/triage/: agent.py  triage_eval.evalset.json
api/app/fixtures/: mock_data.py  raw_data.py
api/app/models/: __init__.py  incident.py  incident_embedding.py  timeline_event.py
api/app/routes/: demo.py  incidents.py  ws.py
api/app/schemas/: agents.py  alert.py  api.py  domain.py  incident.py  similar.py  ws.py
api/app/services/: embedding.py  github_service.py  incident_service.py  mock_pipeline.py  pipeline.py  similar_incidents.py  similar_index.py  tasks.py  ws_manager.py
api/fixtures/: demo_scenarios.py
frontend/: CLAUDE.md  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts  http.ts  index.ts  mock.ts
frontend/src/hooks/: useIncidentWebSocket.ts
frontend/src/layouts/: DashboardLayout.tsx
(+25 files in other folders)
